# unix-commands-rs

./: .env  Cargo.toml  README.md
src/: lib.rs
tests/: cli.rs
