[package]
name = "unix_commands"
version = "0.1.0"
authors = ["woxjro <n0i6c0k2@gmail.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/woxjro/unix_commands"
repository = "https://github.com/woxjro/unix_commands"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
